# Sanket

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .trivyignore  PRISMA_QA_Report.docx  README.md  RESTRUCTURE_AND_DECOUPLE_PLAN.md  Start_SANKET.bat  docker-compose.yml  pip-audit-ignore.txt
.claude/: launch.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  migrate.ps1  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_from_sql.py  0002_add_rss_visual_signal_sources.py  0003_add_weather_competitor_signal_sources.py  0004_new_analytics_tables.py  0005_firebase_uid.py  0006_historical_sales_in_stock.py  0007_inventory_levels.py  0008_hybrid_run_async.py  0009_add_fda_logistics_signal_sources.py  0010_stripe_to_razorpay.py  0011_reconcile_schema_and_force_rls.py  0012_seed_industry_verticals.py  0013_auto_partition_maintenance.py  0014_analytics_covering_indexes.py  0015_team_invites.py  0016_grant_alembic_version_read.py  64b00842a1e6_add_bypass_rls_to_policies.py
backend/app/: __init__.py  config.py  main.py
backend/app/connectors/: __init__.py  catalog.py
backend/app/core/: cache.py  crypto.py  database.py  distributed_lock.py  exceptions.py  firebase.py  firebase_auth.py  logging.py  login_attempt.py  observability.py  rbac.py  security.py  sql_replay.py  webhook_replay.py
backend/app/middleware/: idempotency.py  rate_limit.py  region_router.py  security_headers.py  tenant_context.py  usage_metering.py
backend/app/models/: __init__.py  alert.py  audit.py  base.py  billing.py  demo_request.py  enums.py  forecast.py  industry.py  integration.py  inventory.py  invite.py  pharma.py  product.py  sales.py  signal.py  tenant.py  trend.py  webhook.py
backend/app/realtime/: __init__.py  connection_manager.py  events.py
backend/app/routers/: anomaly.py  auth.py  billing.py  cross_industry.py  demo_request.py  export.py  financial.py  forecast_accuracy.py  forecasts.py  hybrid_forecast.py  industry_router.py  integrations.py  integrations_hub.py  inventory.py  invites.py  onboarding.py  planning.py  products.py  sales_analytics.py  shortage_alerts.py  signals.py  skus.py  trends.py  webhooks.py  websocket.py
backend/app/routers/industries/: agrocenter.py  electronics.py  fashion.py  hardware.py  pharma.py
backend/app/schemas/: __init__.py  alert.py  auth.py  demo_request.py  industry.py  integrations.py  invite.py  onboarding.py  planning.py  product.py  signal.py  tenant.py  trends.py
backend/app/scripts/: audit_secrets.py  generate_firebase_credentials.py  seed_firebase_users.py
backend/app/services/: audit.py  data_quality.py  hybrid_forecast.py  industry_config.py  industry_context.py  inventory.py  usage.py  webhooks.py
backend/app/services/billing/: __init__.py  razorpay_client.py  subscription_manager.py
backend/app/services/external_signals/: __init__.py  base.py  competitor_price_connector.py  fda_connector.py  fred_connector.py  logistics_connector.py  reddit_connector.py  regional_demand_connector.py  rss_connector.py  signal_pipeline.py  trends_connector.py  visual_connector.py  weather_connector.py
backend/app/services/integrations/: __init__.py  file_import.py  shopify_client.py  shopify_poller.py  shopify_sync.py  sql_source.py  woocommerce_client.py  woocommerce_sync.py
backend/app/workers/: forecast_worker.py
backend/benchmarks/: README.md  __init__.py  bench_cache_and_index.py  bench_rate_limit.py  bench_sales_summary.py
backend/ml/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml
backend/ml/benchmarks/: __init__.py  baselines.py  run_offline.py  synthetic.py
backend/ml/sanket_ml/: __init__.py  config.py  registry.py
backend/ml/scripts/: backfill_features.py  benchmark.py  load_sales_csv.py  train_all.py
backend/ml/tests/: conftest.py  test_backtest_skill.py  test_censoring.py  test_ensemble.py  test_features.py  test_throttle.py  test_zero_shot_censoring.py
backend/sql/: 001_extensions.sql  002_schema.sql  003_rls_policies.sql  004_seed.sql  005_phase5_realtime_billing.sql  006_phase6_trends_alerts.sql  007_agrocenter.sql  008_a_inventory.sql  008_b_hardware.sql  009_integrations.sql  010_full_demo_data.sql  011_dev_subscription.sql  012_forecast_accuracy_backtest.sql
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_connector_catalog.py  test_distributed_lock.py  test_external_signals.py  test_file_import.py  test_firebase_auth.py  test_idempotency.py  test_industry_config.py  test_industry_context.py  test_integrations_hub_db.py  test_inventory_service.py  test_partitions.py  test_pharma_gxp.py  test_rate_limit.py  test_rbac.py  test_rls_isolation.py  test_shopify_sync.py  test_sql_source.py  test_webhook_delivery.py  test_webhook_replay.py  test_woocommerce_sync.py
(+283 files in other folders)
