[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanket-backend"
version = "0.1.0"
description = "SANKET Enterprise Multi-Industry Predictive Analytics & Supply Chain Platform"
requires-python = ">=3.12"
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # MySQL direct-source connector (app.services.integrations.sql_source)
    "aiomysql>=0.2.0",

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Security
    "passlib[argon2]>=1.7.4",
    "pyjwt[crypto]>=2.9.0",

    # HTTP client (for external signal ingestion)
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.4.0",

    # Utilities
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "orjson>=3.10.0",
    # Excel file uploads (CSV uses stdlib; .xlsx needs openpyxl)
    "openpyxl>=3.1.0",

    # Observability
    "prometheus-client>=0.21.0",

    # Firebase SDK
    "firebase-admin>=6.5.0",

    # Real-time + billing + webhook delivery
    "redis>=5.1.0",
    "razorpay>=1.4.2",
    "websockets>=13.1",

    # Async job queue (durable background forecast runs)
    "arq>=0.26.0",
]

[project.optional-dependencies]
signals = [
    # RSS/Atom feed parsing — RssConnector emits synthetic if not installed
    "feedparser>=6.0.11",
    # Reddit social sentiment
    "praw>=7.7.0",
    # Google Trends search volume
    "pytrends>=4.9.2",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "testcontainers[postgres]>=4.8.0",
]
otel = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S104", "E501", "S311", "N817", "S110", "S112", "B905", "A003", "B904", "S105", "S324", "E741"]

[tool.mypy]
python_version = "3.12"
mypy_path = "ml"
ignore_missing_imports = true
check_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]
